// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Square should render without exploding for value 0 1`] = `
<div
  className="square"
>
  X
</div>
`;

exports[`Square should render without exploding for value 1 1`] = `
<div
  className="square"
>
  O
</div>
`;

exports[`Square should render without exploding for value null 1`] = `
<div
  className="square"
  onClick={[Function]}
/>
`;
